# paper_rapetti_2023_icra_ergonomic_payload_lifting

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md
app/: CMakeLists.txt
app/models/: CMakeLists.txt  README.md
app/visualizer/: CMakeLists.txt  HumanRobotReferenceVisualizer.ini  HumanRobotReferenceVisualizerCollaborative.ini  MultiRobotVisualizer.ini  PostureOptimization.ini  RobotRobotReferenceVisualizerCollaborative.ini  RobotRobotVisualizer.ini  RobotRobotVisualizer_icub3.ini  RobotVisualizer.ini  RobotVisualizer_iCubGenova09.ini  RobotVisualizer_icub3.ini
app/yarpmotorgui/: CMakeLists.txt
modules/: CMakeLists.txt
modules/MultiRobotVisualizer/: CMakeLists.txt  README.md
modules/MultiRobotVisualizer/src/: main.cpp
whole-body-controllers/: CMakeLists.txt  README.md
whole-body-controllers/collaborative-human-robot-ergonomy-control/: .gitignore  CollaborativeErgonomyControl.mdl  analyzeTrackingComparison.m  analyzerTorqueNormComparison.m  controllerPerformanceAnalyzer.m  initCollaborativeErgonomyControl.m  plot_aesthetic.m  rankAnalyzer.m  stopCollaborativeErgonomyControl.m
whole-body-controllers/collaborative-human-robot-ergonomy-control/app/: configure.m
whole-body-controllers/matlab-library/: CMakeLists.txt
whole-body-controllers/momentum-based-controller/: MomentumBasedController.mdl  MomentumBasedController_R2020b.mdl  controllerPerformanceAnalyzer.m  initMomentumBasedController.m  stopMomentumBasedController.m
whole-body-controllers/momentum-based-controller/app/: configure.m
whole-body-controllers/simulink-library/: CMakeLists.txt
(+73 files in other folders)
